--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,7 @@ p {
 
 .input-box {
   position: relative;
+  top: -6px;
   width: 60%;
   height: 1.2rem;
   padding: 25px;
@@ -59,8 +60,39 @@ p {
   border-radius: 5px;
   background-color: #fff;
   display: inline-block;
-  
 }
+.button{
+  position: relative;
+  width: 20%;
+  top: -18px;
+  left: 233px;
+  height: .5rem;
+  padding: 25px;
+  min-width: 100px;
+  border-radius: 5px;
+  border: 2.5px solid #E0E1E4;
+  box-shadow: 0px 0px 20px -20px;
+  cursor: pointer;
+  background: linear-gradient(180deg,
+      rgba(193, 0, 212, 1) 0%,
+      rgba(255, 113, 42, 1) 100%);
+  transition: all 0.2s ease-in-out 0ms;
+  user-select: none;
+  color: #E0E1E4;
+  font-size: bold;
+}
+
+.button:hover {
+  background: linear-gradient(30deg,
+      rgb(0, 174, 255) 0%,
+      rgb(81, 71, 226) 100%);
+  box-shadow: 0px 0px 20px -18px;
+}
+
+.button:active {
+  transform: scale(0.95);
+}
+
 .set-units {
   position: relative;
   width: 21%;
@@ -345,6 +377,38 @@ p {
     display: inline-block;
 
   }
+    .input-box {
+      position: relative;
+      top: -6px;
+      width: 60%;
+      height: 1.2rem;
+      padding: 25px;
+      border: 1px solid rgba(0, 0, 0, 0.07);
+      border-radius: 5px;
+      background-color: #fff;
+      display: inline-block;
+    }
+  
+    .button {
+      position: relative;
+      width: 20%;
+      top: -18px;
+      left: 233px;
+      height: .5rem;
+      padding: 25px;
+      min-width: 100px;
+      border-radius: 5px;
+      border: 2.5px solid #E0E1E4;
+      box-shadow: 0px 0px 20px -20px;
+      cursor: pointer;
+      background: linear-gradient(180deg,
+          rgba(193, 0, 212, 1) 0%,
+          rgba(255, 113, 42, 1) 100%);
+      transition: all 0.2s ease-in-out 0ms;
+      user-select: none;
+      color: #E0E1E4;
+      font-size: bold;
+    }
 
   .set-units {
     position: relative;
